# trellis-case-study

./: .coveragerc  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: django.yml  makefile.yml  python-app.yml
api/api/: asgi.py  settings.py  urls.py  wsgi.py
api/api/settings/: base.py  dev.py  production.py
api/casestudy/: apps.py  serializers.py  services.py  utils.py  views.py
api/casestudy/tests/: test_cases.py  test_utils.py
